<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.screen.AboutUsFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:scaleType="centerCrop"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:fontFamily="@font/merriweather_regular"
                android:layout_margin="4dp"
                android:textStyle="bold"
                android:text="News Provider"/>

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather_regular"
                android:layout_margin="4dp"
                android:justificationMode="inter_word"
                android:textSize="14sp"
                android:text="@string/text_1"
                />
            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather_regular"
                android:layout_margin="4dp"
                android:justificationMode="inter_word"
                android:textSize="14sp"
                android:text="@string/text_2"
                />


            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather_regular"
                android:layout_margin="4dp"
                android:justificationMode="inter_word"
                android:textSize="14sp"
                android:text="@string/text_3"
                />

            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather_regular"
                android:layout_margin="4dp"
                android:justificationMode="inter_word"
                android:textSize="14sp"
                android:text="@string/text_4"
                />
            <TextView
                android:id="@+id/text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather_regular"
                android:layout_margin="4dp"
                android:textSize="14sp"
                android:autoLink="web"
                android:text="@string/text_5"
                />
            <TextView
                android:id="@+id/text6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather_regular"
                android:layout_margin="4dp"
                android:textSize="14sp"
                android:autoLink="web"
                android:text="@string/text_6"
                />


            <TextView
                android:id="@+id/text7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather_regular"
                android:layout_margin="4dp"
                android:justificationMode="inter_word"
                android:textSize="14sp"
                android:text="@string/text_7"
                />

            <TextView
                android:id="@+id/text_8.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather_regular"
                android:layout_margin="4dp"
                android:textSize="14sp"
                android:autoLink="web"
                android:text="@string/text_8.1"
                />

            <TextView
                android:id="@+id/text_8.2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather_regular"
                android:layout_margin="4dp"
                android:textSize="14sp"
                android:text="@string/text_8.2"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/merriweather_regular"
                android:layout_margin="4dp"
                android:paddingTop="6dp"
                android:text="App creator"/>

            <TextView
                android:id="@+id/text10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather_regular"
                android:layout_margin="4dp"
                android:textSize="14sp"
                android:text="@string/text_10"
                />

            <TextView
                android:id="@+id/text11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather_regular"
                android:layout_margin="4dp"
                android:textSize="14sp"
                android:text="@string/text_11"
                />


            <TextView
                android:id="@+id/text12_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather_regular"
                android:layout_margin="4dp"
                android:textSize="14sp"
                android:autoLink="email"
                android:text="@string/text_12.1"
                />


            <TextView
                android:id="@+id/text12_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather_regular"
                android:layout_margin="4dp"
                android:paddingBottom="10dp"
                android:textSize="14sp"
                android:autoLink="phone"
                android:text="@string/text_12.2"
                />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>